--- a/Michus/Views/Descuentos/listadescuentos.cshtml
+++ b/Michus/Views/Descuentos/listadescuentos.cshtml
@@ -83,6 +83,13 @@
                         </button>
                     }
 
+                    @if (item.value.TiSitu != "APR" && item.value.TiSitu != "PAP")
+                    {
+                        <button class="btn-check" type="button" data-id="@item.value.IdDescuento" data-situ="PAP" title="Activar">
+                            ✔️
+                        </button>
+                    }
+
                     @if (item.value.TiSitu != "ANU")
                     {
                         <button class="btn-x" type="button" data-id="@item.value.IdDescuento" data-situ="ANU" title="Desactivar">
@@ -103,41 +110,55 @@
 
 </div>
 
-<!-- Modal de agregar descuento / DISEÑO -->
+<!-- Modal de agregar descuento -->
 <div id="addDiscountModal" class="custom-modal">
     <div class="modal-content">
         <span class="close-modal">&times;</span>
         <h2>Agregar Descuento</h2>
         <form id="addDiscountForm" method="post">
-            <label for="startDate">Fecha Inicio: </label>
-            <input type="date" id="FECHA_INICIO" name="FECHA_INICIO" required />
-            <label for="endDate">Fecha Fin: </label>
-            <input type="date" id="FECHA_FIN" name="FECHA_FIN" required />
-            
-            <label for="discountType">TIPO_DESCUENTO:</label>
-            <select id="discountType" name="TIPO_DESCUENTO" required>
-                <option value="" disabled selected>Seleccione un Tipo de Descuento</option>
-                <option value="1">Fijo</option>
-                <option value="0">Porcentual</option>
-            </select>
-            
-            <label for="discountValue" id="discountLabel">Precio de Descuento:</label>
-            <input type="number" id="discountValue" name="PRECIO_DESCUENTO" required />
+            <div class="form-grid">
+            <div class="form-group">
+                <label for="FECHA_INICIO">Fecha Inicio:</label>
+                <input type="date" id="FECHA_INICIO" name="FECHA_INICIO" required />
+            </div>
 
+            <div class="form-group">
+                <label for="FECHA_FIN">Fecha Fin:</label>
+                <input type="date" id="FECHA_FIN" name="FECHA_FIN" required />
+            </div>
 
-            <label for="applyCategory">Aplicar Categoria:</label>
-            <select id="applyCategory" name="APLICAR_CATEGORIA" required>
-                <option value="" disabled selected>Seleccione un el Tipo a Aplicar</option>
-                <option value="1">Categorias</option>
-                <option value="0">Productos</option>
-            </select>
+            <div class="form-group">
+                <label for="discountType">Tipo de Descuento:</label>
+                <select id="discountType" class="select-custom" name="TIPO_DESCUENTO" required>
+                    <option value="" disabled selected>Seleccione un Tipo de Descuento</option>
+                    <option value="1">Fijo</option>
+                    <option value="0">Porcentual</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label for="discountValue">Precio de Descuento:</label>
+                <input type="number" id="discountValue" name="PRECIO_DESCUENTO" required />
+            </div>
+
+            <div class="form-group">
+                <label for="applyCategory">Aplicar Categoría:</label>
+                <select id="applyCategory" class="select-custom"  name="APLICAR_CATEGORIA" required>
+                    <option value="" disabled selected>Seleccione una opción</option>
+                    <option value="1">Categorías</option>
+                    <option value="0">Productos</option>
+                </select>
+            </div>
 
             @Html.AntiForgeryToken()
-            <div id="categoryTableContainer"></div>
-            
-            <button type="submit">Guardar</button>
+                <div id="categoryTableContainer" class="scrollable-table"></div>
+
+                <button type="submit" class="styled-button">Guardar</button>
+            </div>
         </form>
+
     </div>
+
 </div>
 
 
@@ -147,16 +168,18 @@
         <span class="close-details-modal">&times;</span>
         <h2>Detalles del Descuento</h2>
         <div id="discount-details-content">
-            <!-- Aquí se mostrarán los detalles del descuento -->
+            <!-- DETALLES -->
         </div>
     </div>
 </div>
 
+
+<!-- FUNCIONES -->
 <script>
     document.addEventListener('DOMContentLoaded', function () {
         document.querySelectorAll('.discount-card').forEach(card => {
             card.addEventListener('click', function (event) {
-                if (event.target.closest('input[type="checkbox"]') || event.target.closest('button')) {
+                if (event.target.closest('input') || event.target.closest('button') || event.target.closest('label')) {
                     return;
                 }
 
@@ -165,6 +188,7 @@
                 fetch(`/Descuentos/DetallesDescuento/${discountId}`)
                     .then(response => response.json())
                     .then(data => {
+                        // Formatear los datos recibidos
                         const promocion = (data.idPromocion && Object.keys(data.idPromocion).length > 0)
                             ? JSON.stringify(data.idPromocion)
                             : 'NO APLICA';
@@ -179,9 +203,9 @@
 
                         const categoriasHTML = categorias.map(cat =>
                             `<tr>
-                                    <td>${cat.ID_CATEGORIA}</td>
-                                    <td>${cat.CATEGORIA}</td>
-                                </tr>`
+                            <td>${cat.ID_CATEGORIA}</td>
+                            <td>${cat.CATEGORIA}</td>
+                        </tr>`
                         ).join('');
 
                         const productos = Array.isArray(data.Productos)
@@ -190,73 +214,76 @@
 
                         const productosHTML = productos.map(prod =>
                             `<tr>
-                                    <td>${prod.ID_PRODUCTO}</td>
-                                    <td>${prod.PROD_NOM}</td>
-                                    <td>${prod.DESCRIPCION}</td>
-                                    <td>${prod.PRECIO}</td>
-                                    <td>${prod.ESTADO === "1" ? "Activo" : "Inactivo"}</td>
-                                    <td>${prod.PRECIO_FINAL}</td>
-                                </tr>`
+                            <td>${prod.ID_PRODUCTO}</td>
+                            <td>${prod.PROD_NOM}</td>
+                            <td>${prod.DESCRIPCION}</td>
+                            <td>${prod.PRECIO}</td>
+                            <td>${prod.ESTADO === "1" ? "Activo" : "Inactivo"}</td>
+                            <td>${prod.PRECIO_FINAL}</td>
+                        </tr>`
                         ).join('');
 
+                        // Insertar los detalles en el modal
                         document.getElementById('discount-details-content').innerHTML = `
-                                <div>
-                                    <h3>Descuento: ${data.IdDescuento}</h3>
-                                    <p>Promoción: ${promocion}</p>
-                                    <p>Evento: ${evento}</p>
-                                    <p>Desde: ${data.FechaInicio ? new Date(data.FechaInicio).toLocaleDateString() : 'NO APLICA'}</p>
-                                    <p>Hasta: ${data.FechaFin ? new Date(data.FechaFin).toLocaleDateString() : 'NO APLICA'}</p>
-                                    <p>
-                                        ${data.TipoDescuento == 1
+                        <div>
+                            <h3>Descuento: ${data.IdDescuento}</h3>
+                            <p>Promoción: ${promocion}</p>
+                            <p>Evento: ${evento}</p>
+                            <p>Desde: ${data.FechaInicio ? new Date(data.FechaInicio).toLocaleDateString() : 'NO APLICA'}</p>
+                            <p>Hasta: ${data.FechaFin ? new Date(data.FechaFin).toLocaleDateString() : 'NO APLICA'}</p>
+                            <p>
+                                ${data.TipoDescuento == 1
                                 ? `Descuento Fijo: S/. ${data.PrecioDescuento}`
                                 : `Descuento Porcentual: ${data.PrecioDescuento}%`}
-                                    </p>
-                                    <p>TI_SITU: ${data.TI_SITU}</p>
+                            </p>
+                            <p>TI_SITU: ${data.TI_SITU}</p>
+                        </div>
+                        <div style="display: flex; gap: 20px; margin-top: 20px;">
+                            <div style="flex: 1;">
+                                <h4>Categorías</h4>
+                                <div class="scrollable-container">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>ID Categoria</th>
+                                                <th>Categoria</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            ${categoriasHTML || `<tr><td colspan="2">No se encontraron categorías</td></tr>`}
+                                        </tbody>
+                                    </table>
                                 </div>
-                                <div style="display: flex; gap: 20px; margin-top: 20px;">
-                                    <div style="flex: 1;">
-                                        <h4>Categorías</h4>
-                                        <div class="scrollable-container">
-                                            <table>
-                                                <thead>
-                                                    <tr>
-                                                        <th>ID Categoria</th>
-                                                        <th>Categoria</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    ${categoriasHTML || `<tr><td colspan="2">No se encontraron categorías</td></tr>`}
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
-                                    <div style="flex: 1;">
-                                        <h4>Productos</h4>
-                                        <div class="scrollable-container">
-                                            <table>
-                                                <thead>
-                                                    <tr>
-                                                        <th>ID Producto</th>
-                                                        <th>Producto</th>
-                                                        <th>Descripción</th>
-                                                        <th>Precio</th>
-                                                        <th>Estado</th>
-                                                        <th>Precio Final</th>
-                                                    </tr>
-                                                </thead>
-                                                <tbody>
-                                                    ${productosHTML || `<tr><td colspan="5">No se encontraron productos</td></tr>`}
-                                                </tbody>
-                                            </table>
-                                        </div>
-                                    </div>
+                            </div>
+                            <div style="flex: 1;">
+                                <h4>Productos</h4>
+                                <div class="scrollable-container">
+                                    <table>
+                                        <thead>
+                                            <tr>
+                                                <th>ID Producto</th>
+                                                <th>Producto</th>
+                                                <th>Descripción</th>
+                                                <th>Precio</th>
+                                                <th>Estado</th>
+                                                <th>Precio Final</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            ${productosHTML || `<tr><td colspan="5">No se encontraron productos</td></tr>`}
+                                        </tbody>
+                                    </table>
                                 </div>
-                            `;
+                            </div>
+                        </div>
+                    `;
 
+                        // Mostrar el modal con los detalles
                         document.getElementById('detailsDiscountModal').style.display = 'block';
                     });
             });
         });
+
 
         document.querySelector('.close-details-modal').addEventListener('click', function () {
             document.getElementById('detailsDiscountModal').style.display = 'none';
@@ -327,6 +354,8 @@
         });
 
 
+
+
         document.getElementById('applyCategory').addEventListener('change', function () {
             var applyCategory = this.value;
             var tableContainer = document.getElementById('categoryTableContainer');
@@ -376,6 +405,8 @@
                 .catch(error => console.error('Error fetching categories:', error));
         }
 
+
+
         function fetchProducts() {
             fetch('/Descuentos/ListarProductos')
                 .then(response => response.json())
@@ -415,8 +446,7 @@
                 .catch(error => console.error('Error fetching products:', error));
         }
 
-
-                  const form = document.getElementById('addDiscountForm');
+        const form = document.getElementById('addDiscountForm');
 
         form.addEventListener('submit', function (event) {
         event.preventDefault();
@@ -473,10 +503,38 @@
         });
     });
 
+        document.querySelectorAll('.toggle input[type="checkbox"], .toggle label').forEach(toggle => {
+            toggle.addEventListener('change', function () {
+                const isChecked = this.checked;
+                const idDescuento = this.closest('.discount-card').getAttribute('data-discount-id');
 
+                console.log(`ID Descuento: ${idDescuento}`);
 
+                fetch(`/Descuentos/activar-descuento/${idDescuento}`, {
+                    method: 'POST',
+                    headers: {
+                        'Content-Type': 'application/json',
+                        'X-CSRF-TOKEN': document.querySelector('input[name="__RequestVerificationToken"]').value // Token CSRF
+                    },
+                    body: JSON.stringify({
+                        idDescuento: idDescuento
+                    })
+                })
+                    .then(response => {
+                        if (!response.ok) {
+                            throw new Error('Error al actualizar el estado del descuento');
+                        }
+                        return response.json();
+                    })
+                    .then(data => {
+                        alert(data.message || 'Estado actualizado correctamente');
+                    })
+                    .catch(error => {
+                        console.error('Error:', error);
+                        alert('Hubo un error al actualizar el estado.');
+                    });
+            });
+        });
 
-
-    
     });
 </script>
